# ChronoRetrace

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BACKTEST_FEATURE_ENHANCEMENT_DESIGN.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  GEMINI.md  LICENSE  Makefile  README.md  README_CN.md  REFACTOR_REPORT.md  STOCK_SCREENER_DESIGN.md  docker-compose.prod.yml  docker-compose.yml  enhance_plan.md  enhance_plan_v2.md  full_pytest_out.txt  mypy.ini  navigation_restructure_design.md  pyproject.toml  pyrightconfig.json  quick-deploy.sh  todo.txt
backend/: .coverage  .env.example  .pylintrc  Dockerfile  alembic.ini  bandit_report.json  chronoretrace.db  code_quality_report.md  debug_websocket.py  dev.sh  manual_update_metrics.py  mypy.ini  optimize_database.py  pip_list.txt  pyproject.toml  pyrightconfig.json  pytest.ini  refactor_plan.md  requirements-dev.txt  requirements.txt  requirements_data_quality.txt  run_server.sh  start_dev.py
backend/alembic/versions/: add_asset_config_tables.py
backend/app/: main.py  py.typed
backend/app/analytics/: models.py
backend/app/analytics/api/: endpoints.py
backend/app/analytics/backtest/: __init__.py  backtester.py  signal_generator.py
backend/app/analytics/schemas/: strategy_response.py  strategy_schema.py  technical_analysis.py
backend/app/analytics/screener/: screener_service.py
backend/app/analytics/services/: strategy_service.py  technical_analysis_service.py
backend/app/api/v1/: a_industries.py  admin.py  admin.py.backup  asset_backtest.py  asset_config.py  asset_screener.py  auth.py  backtest.py  cache.py  cached_stocks.py  commodities.py  crypto.py  data_quality.py  futures.py  health.py  monitoring.py  options.py  screener.py  stocks.py  users.py  watchlist.py  websocket.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/data/fetchers/: a_industries_fetcher.py  commodity_fetcher.py  crypto_fetcher.py  futures_fetcher.py  options_fetcher.py
backend/app/data/fetchers/stock_fetchers/: a_share_fetcher.py  us_stock_fetcher.py
backend/app/data/managers/: data_manager.py  data_utils.py  database_admin.py  database_writer.py
backend/app/data/quality/: deduplication_service.py  quality_manager.py  validation_service.py
backend/app/db/: models.py  session.py
backend/app/infrastructure/: error_handling_service.py  logging_service.py
backend/app/infrastructure/cache/: __init__.py  cache_service.py  cache_warming.py  memory_cache.py  middleware.py  redis_manager.py
backend/app/infrastructure/database/: __init__.py  index_optimization.py  init_db.py  migration_manager.py  migrations.py  models.py  models.pyi  session.py
backend/app/infrastructure/database/migrations/: 001_create_auth_tables.py  002_create_watchlist_tables.py  003_postgresql_optimizations.py  004_update_user_preferences.py  005_add_strategy_tables.py
backend/app/infrastructure/monitoring/: __init__.py  middleware.py  performance_monitor.py
backend/app/infrastructure/performance/: performance_optimization_service.py
backend/app/jobs/: update_daily_metrics.py
backend/app/schemas/: annual_earnings.py  asset_config.py  asset_types.py  auth_schemas.py  backtest.py  commodity.py  common.py  corporate_action.py  fundamental.py  industry.py  screener.py  stock.py
backend/app/services/: README_data_quality.md  __init__.py  a_industries_fetcher.py  a_share_fetcher.py  auth_service.py  backtest_service.py  backtester.py  commodity_fetcher.py  crypto_fetcher.py  data_deduplication_service.py  data_fetcher.py  data_quality_manager.py  data_utils.py  data_validation_service.py  db_admin.py  db_writer.py  error_handling_service.py  futures_fetcher.py  logging_service.py  options_fetcher.py  performance_optimization_service.py  screener_service.py  stock_service.py  us_stock_fetcher.py
backend/app/websocket/: __init__.py  connection_manager.py  data_stream_service.py  message_handler.py
backend/config/: alert-rules.yml  alertmanager.yml  autoscaling.yaml  environment_manager.py  grafana-dashboard.json  nginx.conf  performance.yaml  prometheus.yml
backend/config/environments/: development.env  production.env  testing.env
backend/docs/: README.md  cache_architecture_design.md  deployment.md  monitoring_alerting_system_design.md  user_auth_development_plan.md  websocket_realtime_design.md  websocket_test_cases.md  websocket_usage_guide.md
backend/scripts/: deploy_monitoring.py  monitoring_health_check.py  setup_postgres.py
backend/tests/: conftest.py  test_a_industries.py  test_a_share_fetcher.py  test_admin.py  test_backtest_api.py  test_backtester.py  test_commodities.py  test_crypto.py  test_data_deduplication_service.py  test_data_fetcher.py  test_data_quality_integration.py  test_data_utils.py  test_data_validation_service.py  test_db_session.py  test_futures.py  test_options.py  test_performance_optimization_service.py  test_screener_integration.py  test_screener_service.py  test_services.py  test_update_daily_metrics.py  test_us_stock_fetcher.py
backend/tests/integration/: test_admin.py  test_cache_integration.py  test_screener_integration.py  test_services.py  test_update_daily_metrics.py  test_websocket_basic.py  test_websocket_error.py  test_websocket_fix.py  test_websocket_stress.py  test_websocket_subscription.py
backend/tests/integration/analytics/: test_strategy_backtest_integration.py
backend/tests/unit/: test_a_industries.py  test_a_share_fetcher.py  test_backtester.py  test_cache_service.py  test_commodities.py  test_crypto.py  test_data_deduplication_service.py  test_data_quality_integration.py  test_data_utils.py  test_data_validation_service.py  test_db_session.py  test_futures.py  test_python_version.py  test_screener_service.py  test_websocket_manager.py
backend/tests/unit/analytics/: test_api_endpoints.py  test_strategy_backtest.py
backend/tests/unit/app/: test_main.py
backend/tests/unit/app/api/v1/: test_a_industries.py  test_commodities.py  (+2 more)
backend/tests/unit/app/services/: test_screener_service.py
backend/tests/unit/app/websocket/: test_websocket_manager.py
(+119 files in other folders)
